--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <span>Ramilahy harivelo Denis</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, Pakistan.</p>
+        <p>A Web Developer based in Lahore, mada.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
