--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
   <!-- Put your site title here -->
   <title>
-    denis RH | A designer
+    denis RH / Designer UX
   </title>
 
   <meta name="description" content="Add small description of yourslef.">
   <!-- Add some coding keywords below, Ex: (React, CSS etc) -->
-  <meta name="keywords" content="Put your name, skills and some coding keywords" />
+  <meta name="keywords" content="Ramilahy Harivelo Denis, Designer UX, Designer UI" />
   <link rel="stylesheet" href="index.css" />
 </head>
 
@@ -39,7 +39,7 @@
 
   <header class="header" role="banner" id="top">
     <div class="row">
-      <nav class="nav" role="navigation">
+     <!-- <nav class="nav" role="navigation">
         <ul class="nav__items">
           <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
           <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>
@@ -50,16 +50,16 @@
             <a href="#contact" class="nav__link">Contact</a>
           </li>
         </ul>
-      </nav>
+      </nav> -->
     </div>
     <div class="header__text-box row">
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>Ramilahy harivelo Denis</span>
+          <span>designer</span> <span>UX</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>A Web Developer based in Lahore, mada.</p>
+        <p>Designer graphique depuis 2010. Chacune de mes réalisations est unique et personnalisée. Je travaille chaque graphisme et design selon vos besoins, mais aussi pour qu’il ressemble et reflète votre projet, votre univers.</p>
         <a href="#contact" class="btn btn--pink">Get in touch</a>
       </div>
     </div>
