--- a/index.html
+++ b/index.html
@@ -56,11 +56,17 @@
       <div class="header__text">
         <h1 class="heading-primary">
           <!-- Replace the following name with your name -->
-          <span>designer</span> <span>UX</span>
+          <span class="style_txt_designer">designer</span> <span class="style_txt_ux">UX</span>
         </h1>
         <!-- Put a small paragraph about yourself -->
-        <p>Designer graphique depuis 2010. Chacune de mes réalisations est unique et personnalisée. Je travaille chaque graphisme et design selon vos besoins, mais aussi pour qu’il ressemble et reflète votre projet, votre univers.</p>
-        <a href="#contact" class="btn btn--pink">Get in touch</a>
+        <div class="col">
+          <img src="./images/img_denis.png" class="work__code" alt="denis">
+          <p>Designer graphique depuis 2010. Chacune de mes réalisations est unique et personnalisée. Je travaille chaque graphisme et design selon vos besoins, mais aussi pour qu’il ressemble et reflète votre projet, votre univers.</p>
+        </div>
+        <h1 class="heading-secondary">
+          <!-- Replace the following name with your name -->
+          <span class="style_txt_name">RAMILAHY HARIVELO</span> <span class="style_txt_firstname">Denis</span>
+        </h1>
       </div>
     </div>
   </header>
