--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </h1>
         <!-- Put a small paragraph about yourself -->
         <div class="col">
-          <img src="./images/img_denis.png" class="work__code" alt="denis">
+          <img src="./images/img_denis.png" class="work__image" alt="denis">
           <p>Designer graphique depuis 2010. Chacune de mes réalisations est unique et personnalisée. Je travaille chaque graphisme et design selon vos besoins, mais aussi pour qu’il ressemble et reflète votre projet, votre univers.</p>
         </div>
         <h1 class="heading-secondary">
