--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
           <!-- Replace the following name with your name -->
           <span class="style_txt_name">RAMILAHY HARIVELO</span> <span class="style_txt_firstname">Denis</span>
         </h1>
+        <p>
+          <span class="style_txt_graphique">designer graphique </span> <span>chez</span> <a href="https://hightao-mg.com" title="View Source Code" target="_blank">
+                 hightao-mg.com
+                </a>
+         </p>
       </div>
     </div>
   </header>
