--- a/index.html
+++ b/index.html
@@ -82,27 +82,26 @@
 
     <section class="work" id="work">
       <div class="row">
-        <h2>My Work</h2>
+        <h2>Projets réalisée</h2>
         <div class="work__boxes">
 
           <!-- Each div with the work__box class is a project. -->
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Portfolio Template</h3>
+              <h3>Miezaka</h3>
               <p>
-                A free Open Source Portfolio for anyone to use for free.
+                Site association
               </p>
               <ul class="work__list">
-                <li>HTML</li>
-                <li>SCSS</li>
-                <li>JavaScript</li>
-                <li>Parcel</li>
+                <li>Conception d’Identité graphique,Logo</li>
+                <li>Création d’Interface graphique version mobile</li>
+                <li>Création d’Interface graphique version Ordinateur</li>
               </ul>
 
               <div class="work__links">
                 <a href="https://nisar.surge.sh" target="_blank" class="link__text">
-                  Visit Site <span>&rarr;</span>
+                  Détail du projet <span>&rarr;</span>
                 </a>
                 <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
                   <img src="./images/github.svg" class="work__code" alt="GitHub">
@@ -110,7 +109,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-1.png" class="work__image" alt="Project 1" />
+              <img src="./images/projet_miezaka.png" class="work__image" alt="Project 1" />
             </div>
           </div>
 
