--- a/index.html
+++ b/index.html
@@ -94,18 +94,15 @@
                 Site association
               </p>
               <ul class="work__list">
-                <li>Conception d’Identité graphique,Logo</li>
-                <li>Création d’Interface graphique version mobile</li>
-                <li>Création d’Interface graphique version Ordinateur</li>
+                <li>Identité graphique</li>
+                <li>design pour mobile</li>
+                <li>design pour PC</li>
               </ul>
 
               <div class="work__links">
-                <a href="https://nisar.surge.sh" target="_blank" class="link__text">
+                <a href="./detail_miezaka.html" target="_blank" class="link__text">
                   Détail du projet <span>&rarr;</span>
-                </a>
-                <a href="https://github.com/nisarhassan12/portfolio" title="View Source Code" target="_blank">
-                  <img src="./images/github.svg" class="work__code" alt="GitHub">
-                </a>
+                </a>            
               </div>
             </div>
             <div class="work__image-box">
