--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
             <div class="work__text">
               <h3>Miezaka</h3>
               <p>
-                Site association
+                SITEWEB ASSOCIATION
               </p>
               <ul class="work__list">
                 <li>Identité graphique</li>
-                <li>design pour mobile</li>
-                <li>design pour PC</li>
+                <li>Design pour mobile</li>
+                <li>Design pour PC</li>
               </ul>
 
               <div class="work__links">
@@ -112,53 +112,44 @@
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Calculator</h3>
+              <h3>Mypropertyz</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                SITEWEB IMMOBILIER
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>Design pour PC</li>
+                <li>Design mobile</li>
+                <li>Design Tablet</li>
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
-                  Visit Site <span>&rarr;</span>
-                </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
+                <a href="./detail_mypropertyz.html" target="_blank" class="link__text">
+                  Détail du projet <span>&rarr;</span>
                 </a>
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-2.png" class="work__image" alt="Project 1" />
+              <img src="./images/projet_mypropertyz.png" class="work__image" alt="Project 1" />
             </div>
           </div>
 
           <div class="work__box">
             <div class="work__text">
-              <h3>Notificator</h3>
+              <h3>Hightao-mg</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod,
-                eius.
+                SITEWEB AGENCE
               </p>
               <ul class="work__list">
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Node</li>
-                <li>MongoDB</li>
+                <li>Identité graphique</li>
+                <li>Design pour mobile</li>
+                <li>Design pour PC</li>
               </ul>
 
               <div class="work__links">
-                <a href="#" class="link__text">
-                  Visit Site <span>&rarr;</span>
+                <a href="./detail_hightao.html" target="_blank" class="link__text">
+                  Détail du projet <span>&rarr;</span>
                 </a>
-                <a href="#">
-                  <img src="./images/github.svg" class="work__code" title="View Source Code" alt="GitHub">
-                </a>
+
               </div>
             </div>
             <div class="work__image-box">
@@ -169,51 +160,9 @@
       </div>
     </section>
 
-    <!-- ***** Clients ***** -->
 
-    <section class="client" id="clients">
-      <div class="row">
-        <h2>Clients</h2>
-        <div class="client__logos">
-          <!-- Add logos of the clients or companies you'have worked with. -->
-          <img src="./images/ronjones.png" class="client__logo" alt="Company 2" />
-          <img src="./images/goldengrid.png" class="client__logo" alt="Company 3" />
-          <img src="./images/bullseye.png" class="client__logo" alt="Company 1" />
-          <img src="./images/mighty-furnitures.png" class="client__logo" alt="Company 1" />
-          <img src="./images/fastlane.png" class="client__logo" alt="Company 3" />
-          <img src="./images/chippy.png" class="client__logo" alt="Company 1" />
-        </div>
-      </div>
-    </section>
 
-    <!-- ***** About ***** -->
-
-    <section class="about" id="about">
-      <div class="row">
-        <h2>About Me</h2>
-        <div class="about__content">
-          <div class="about__text">
-            <!-- Replace the below paragraph with info about yourself -->
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-              nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-              in vel, ex quam quidem quos mollitia labore aut sunt eius
-              ratione molestiae fuga veniam facere similique voluptate.
-            </p>
-            <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
-          </div>
-
-          <div class="about__photo-container">
-            <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <!-- ***** Contact ***** -->
+  <!-- ***** Contact ***** 
 
   <section class="contact" id="contact">
     <div class="row">
@@ -227,11 +176,11 @@
           will do my best to respond back. 😊 The quickest way to reach out to
           me is via an email.
         </p>
-        <!-- Replace the email with yours -->
+
         <a href="mailto:you@example.com" class="btn">you@example.com</a>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- ***** Footer ***** -->
 
@@ -259,18 +208,22 @@
             <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
         </li>
+        <li class="footer__social-link-item">
+        <div class="contact__info">
+          <h2>
+             Me contacter par mail.
+          </h2>
+          <a href="mailto:you@example.com" class="btn">you@example.com</a>
+        </li>
+      </div>
+                                                                                                                         
       </ul>
 
       <!-- If you give me some credit by keeping the below paragraph, will be huge for me 😊 Thanks. -->
       <p>
-        &copy; 2020 - Template designed & developed by <a href="https://nisar.dev" class="link">Nisar</a>.
+        &copy; 2020 - Template designed & developed by <a href="#" class="link">Denis</a>.
       </p>
-      <div class="footer__github-buttons">
-        <iframe
-          src="https://ghbtns.com/github-btn.html?user=nisarhassan12&repo=portfolio-template&type=watch&count=true"
-          frameborder="0" scrolling="0" width="170" height="20" title="Watch Portfolio Template on GitHub">
-        </iframe>
-      </div>
+      
     </div>
   </footer>
 
