--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               </div>
             </div>
             <div class="work__image-box">
-              <img src="./images/project-3.png" class="work__image" alt="Project 3" />
+              <img src="./images/projet_ht.png" class="work__image" alt="Project 3" />
             </div>
           </div>
         </div>
@@ -209,7 +209,7 @@
           </a>
         </li>
         <li class="footer__social-link-item">
-        <div class="contact__info">
+        <div>
           <h2>
              Me contacter par mail.
           </h2>
