--- a/index.html
+++ b/index.html
@@ -39,18 +39,14 @@
 
   <header class="header" role="banner" id="top">
     <div class="row">
-     <!-- <nav class="nav" role="navigation">
+     <nav class="nav" role="navigation">
         <ul class="nav__items">
-          <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
-          <li class="nav__item"><a href="#clients" class="nav__link">Clients</a></li>
-          <li class="nav__item">
-            <a href="#about" class="nav__link">About</a>
-          </li>
+          <li class="nav__item"><a href="#work" class="nav__link">Projets</a></li>
           <li class="nav__item">
             <a href="#contact" class="nav__link">Contact</a>
           </li>
         </ul>
-      </nav> -->
+      </nav>
     </div>
     <div class="header__text-box row">
       <div class="header__text">
@@ -184,7 +180,7 @@
 
   <!-- ***** Footer ***** -->
 
-  <footer role="contentinfo" class="footer">
+  <footer role="contentinfo" class="footer" id="contact">
     <div class="row">
       <!-- Update the links to point to your accounts -->
       <ul class="footer__social-links">
@@ -209,19 +205,20 @@
           </a>
         </li>
         <li class="footer__social-link-item">
-        <div>
-          <h2>
-             Me contacter par mail.
-          </h2>
-          <a href="mailto:you@example.com" class="btn">you@example.com</a>
+          <div>
+            <p>
+               Me contacter par mail.
+            </p>
+            <a href="mailto:denis@hightao-mg.com" class="btn">denis@hightao-mg.com</a>
+          </div>
         </li>
-      </div>
+
                                                                                                                          
       </ul>
 
       <!-- If you give me some credit by keeping the below paragraph, will be huge for me 😊 Thanks. -->
       <p>
-        &copy; 2020 - Template designed & developed by <a href="#" class="link">Denis</a>.
+        &copy; 2021 - Template designed & developed by <a href="#" class="link">Denis</a>.
       </p>
       
     </div>
