--- a/index.html
+++ b/index.html
@@ -220,8 +220,10 @@
                         <h5>Miezaka</h5>
                         <figcaption>
                             <ul>
-                                <li>UX,UI</li> <br>
-                                <li>Conception</li>
+                                <li>UX et UI</li> <br>
+				<li>Mobile / Tablet / PC</li>
+                                <li>Création Logo</li>
+				
                             </ul>
                         </figcaption>
                     </div> 
@@ -236,8 +238,8 @@
                         <h5>My Propertyz</h5>
                         <figcaption>
                             <ul>
-                                <li>UX</li> <br>
-                                <li>Conception mobile</li>
+                                <li>UX et UI</li> <br>
+                                <li>Mobile / Tablet / PC</li>
                             </ul>
                         </figcaption>
                     </div> 
@@ -252,8 +254,9 @@
                         <h5>Hightao</h5>
                         <figcaption>
                             <ul>
-                                <li>UI/UX</li> <br>
-                                <li>Création logo</li>
+                                <li>UX et UI</li> <br>
+				<li>Mobile / Tablet / PC</li>
+                                <li>Création Logo</li>
                             </ul>
                         </figcaption>
                     </div> 
