--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <li><a href="#header" id="btn_apropos" class="bapropos">A propos</a></li>
                         <li><a href="#noscrea" id="btn_crea" class="bcrea">Mes crea.</a></li>
                         <li><a href="#linkContact" id="btn_contactmo" class="bcontactmo">Contact</a></li>
-                        <li><p class="footerNav tsipikkkk">Agence progwise</p></li>
+                        <li><p class="footerNav tsipikkkk">DenisRH</p></li>
                     </ul>
                     
                 </div>
