--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <img src="assets/img/crea1.png" alt="non du societe">
                 <div class="information">
                     
-                    <div class="content-desc contenleft" onclick="#">  
+                    <div class="content-desc contenleft" onclick="location.href='../detail-projet.html">  
                         <h5>Miezaka</h5>
                         <figcaption>
                             <ul>
