--- a/detail-projet.html
+++ b/detail-projet.html
@@ -113,7 +113,7 @@
     <section id="methodo">
         <div class="wrapper">
                 <div class="content-methodo">
-                    <img class="img-slogan" src="assets/img/crea1.png" alt="miezaka" width="100%"> 
+                    <img class="img-slogan" src="assets/img/crea1.png" alt="miezaka" width="100%" height="auto"> 
     
                 </div>
             
