--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 </div>
                 <div>
                     <p>MON ADRESSE MAIL</p>
-                    <a class="linki" href="mailto:prog.wise3@gmail.com">denis@hightao-mg.com</a>
+                    <a class="linki" href="mailto:daddy.pros@gmail.com">daddy.pros@gmail.com</a>
                 </div>
                 <div>
                     <p>MON PSEUDO SKYPE</p>
@@ -291,7 +291,7 @@
     <section id="contact-mobile">
         <div class="wrapper">
                 <h1>Me contacter <br>sur</h1>
-                <a class="mail" href="mailto:denis@hightao-mg.com">gmail</a>
+                <a class="mail" href="mailto:daddy.pros@gmail.com">gmail</a>
                 <a class="skype" href="skype:denis harivelo?call">skype</a>
                 <a class="phone" href="tel:+261348344866">phone</a>
                 <footer>designed / developed by denisRH - copyright 2021 </footer>
