--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 </div>
                 <div>
                     <p>MON PSEUDO SKYPE</p>
-                    <a class="linki" href="skype:denis harivelo?call">denis harivelo</a>
+                    <a class="linki" href="skype:daddy_pros?call">daddy_pros</a>
                 </div>
 
                 <footer>designed / developed by denisRH - copyright 2021</footer>
@@ -292,7 +292,7 @@
         <div class="wrapper">
                 <h1>Me contacter <br>sur</h1>
                 <a class="mail" href="mailto:daddy.pros@gmail.com">gmail</a>
-                <a class="skype" href="skype:denis harivelo?call">skype</a>
+                <a class="skype" href="skype:daddy_pros?call">skype</a>
                 <a class="phone" href="tel:+261348344866">phone</a>
                 <footer>designed / developed by denisRH - copyright 2021 </footer>
         </div>
